--- a/src/main/resources/templates/product/categories/computers.html
+++ b/src/main/resources/templates/product/categories/computers.html
@@ -49,7 +49,7 @@
                 <th th:text="#{made_in}"></th>
                 <th><a th:href="@{'/computers_page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir}}">
                     <b th:text="#{price}"></b></a></th>
-                <th th:text="#{actions}"></th>
+                <th th:text="#{view}"></th>
             </tr>
             </thead>
             <tbody>
