--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,38 +34,40 @@
       <div class="container">
 
         <!-- row -->
-        <div class="row">
-          <div class="col-md-12">
-            <div class="hot-deal">
-              <ul class="hot-deal-countdown">
-                <li>
-                  <div>
-                    <h3>00</h3>
-                    <span th:text="#{days}"></span>
-                  </div>
-                </li>
-                <li>
-                  <div>
-                    <h3>00</h3>
-                    <span th:text="#{hours}"></span>
-                  </div>
-                </li>
-                <li>
-                  <div>
-                    <h3>00</h3>
-                    <span th:text="#{mins}"></span>
-                  </div>
-                </li>
-                <li>
-                  <div>
-                    <h3>00</h3>
-                    <span th:text="#{secs}"></span>
-                  </div>
-                </li>
-              </ul>
-              <h2 class="text-uppercase" th:text="#{hot_deal_this_week}"></h2>
-              <p th:text="#{new_collection}"></p>
-              <a class="primary-btn cta-btn" href="#" th:text="#{shop_now}"></a>
+        <div id="countdown" class="countdown">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="hot-deal">
+                <ul class="hot-deal-countdown">
+                  <li>
+                    <div class="countdown-number">
+                      <h3 class="days countdown-time"></h3>
+                      <span class="countdown-text" th:text="#{days}"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="countdown-number">
+                      <h3 class="hours countdown-time"></h3>
+                      <span class="countdown-text" th:text="#{hours}"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="countdown-number">
+                      <h3 class="minutes countdown-time"></h3>
+                      <span class="countdown-text" th:text="#{mins}"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="countdown-number">
+                      <h3 class="seconds countdown-time"></h3>
+                      <span class="countdown-text" th:text="#{secs}"></span>
+                    </div>
+                  </li>
+                </ul>
+                <h2 class="text-uppercase" th:text="#{hot_deal_this_week}"></h2>
+                <p th:text="#{new_collection}"></p>
+                <a class="primary-btn cta-btn" href="#" th:text="#{shop_now}"></a>
+              </div>
             </div>
           </div>
         </div>
@@ -78,5 +80,50 @@
     <!-- /HOT DEAL SECTION -->
 
   <footer th:insert="constantsBlocks/footer :: footer"></footer>
+
+  <script>
+    function getTimeRemaining(endtime) {
+      var t = Date.parse(endtime) - Date.parse(new Date());
+      var seconds = Math.floor((t / 1000) % 60);
+      var minutes = Math.floor((t / 1000 / 60) % 60);
+      var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+      var days = Math.floor(t / (1000 * 60 * 60 * 24));
+      return {
+        'total': t,
+        'days': days,
+        'hours': hours,
+        'minutes': minutes,
+        'seconds': seconds
+      };
+    }
+
+    function initializeClock(id, endtime) {
+      var clock = document.getElementById(id);
+      var daysSpan = clock.querySelector('.days');
+      var hoursSpan = clock.querySelector('.hours');
+      var minutesSpan = clock.querySelector('.minutes');
+      var secondsSpan = clock.querySelector('.seconds');
+
+      function updateClock() {
+        var t = getTimeRemaining(endtime);
+
+        daysSpan.innerHTML = t.days;
+        hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+        minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+        secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+        if (t.total <= 0) {
+          clearInterval(timeinterval);
+        }
+      }
+
+      updateClock();
+      var timeinterval = setInterval(updateClock, 1000);
+    }
+
+    var deadline="January 01 2018 00:00:00 GMT+0300";
+    var deadline = new Date(Date.parse(new Date()) + 3 * 24 * 60 * 60 * 1000);
+    initializeClock('countdown', deadline);
+  </script>
 </body>
 </html>
